feat: separate mysql

--- a/salt/glance/conf/glance-registry.conf
+++ b/salt/glance/conf/glance-registry.conf
@@ -2,7 +2,7 @@
 
 [database]
 
-connection = mysql+pymysql://glance:{{ pillar['glance_dbpass'] }}@controller/glance
+connection = mysql+pymysql://glance:{{ pillar['glance_dbpass'] }}@{{ pillar['mysql_m_ip'] }}/glance
 backend = sqlalchemy
 
 
