--- a/salt/keystone/conf/keystone.conf
+++ b/salt/keystone/conf/keystone.conf
@@ -2,7 +2,7 @@
 log_dir = /var/log/keystone
 
 [database]
-connection = mysql+pymysql://keystone:{{ pillar['keystone_dbpass'] }}@controller/keystone
+connection = mysql+pymysql://keystone:{{ pillar['keystone_dbpass'] }}@{{ pillar['mysql_m_ip'] }}/keystone
 
 
 [token]
