--- a/salt/neutron-server/conf/neutron.conf
+++ b/salt/neutron-server/conf/neutron.conf
@@ -13,7 +13,7 @@ root_helper = "sudo /usr/bin/neutron-rootwrap /etc/neutron/rootwrap.conf"
 
 
 [database]
-connection = mysql+pymysql://neutron:{{ pillar['neutron_dbpass'] }}@controller/neutron
+connection = mysql+pymysql://neutron:{{ pillar['neutron_dbpass'] }}@{{ pillar['mysql_m_ip'] }}/neutron
 
 
 [keystone_authtoken]
