--- a/salt/nova-api/conf/nova.conf
+++ b/salt/nova-api/conf/nova.conf
@@ -11,11 +11,11 @@ auth_strategy = keystone
 
 
 [api_database]
-connection = mysql+pymysql://nova:{{ pillar['nova_dbpass'] }}@controller/nova_api
+connection = mysql+pymysql://nova:{{ pillar['nova_dbpass'] }}@{{ pillar['mysql_m_ip'] }}/nova_api
 
 
 [database]
-connection = mysql+pymysql://nova:{{ pillar['nova_dbpass'] }}@controller/nova
+connection = mysql+pymysql://nova:{{ pillar['nova_dbpass'] }}@{{ pillar['mysql_m_ip'] }}/nova
 
 
 [glance]
