--- a/salt/glance/conf/glance-api.conf
+++ b/salt/glance/conf/glance-api.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 [database]
-connection = mysql+pymysql://glance:{{ pillar['glance_dbpass'] }}@controller/glance
+connection = mysql+pymysql://glance:{{ pillar['glance_dbpass'] }}@{{ pillar['mysql_m_ip'] }}/glance
 backend = sqlalchemy
 
 
